--- a/Loja.Instrumentos.Web/Loja.Instrumentos.Web/Web.config
+++ b/Loja.Instrumentos.Web/Loja.Instrumentos.Web/Web.config
@@ -16,7 +16,7 @@
   </appSettings>
 
 	<connectionStrings>
-		<add name="InstrumentoDbContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=Instrumento;User Id=sa;Password=a;"/>
+		<add name="InstrumentoDbContext" providerName="System.Data.SqlClient" connectionString="Server=JOAOSILVA;Database=Instrumento;User Id=jaum;Password=a;" />
 	</connectionStrings>
 	
   <system.web>
